public/css/pages/about.css
.aboutpage {
  margin-left: 50px;
}

.maindescription {
  margin-bottom: 60px;
}

.instructions-button {
  background-color: #006600;
  display: inline-block;
}

.instructions-button img {
  height: 24px;
  margin: 1px 2px 0px 2px;
}

.footerContainer {
  width: 100%;
  max-width: 550px;
  margin: auto;
  padding-top: 10px;
  font-family: arial, sans-serif;
}

.copyright {
  display: inline-block;
  float: left;
}

.contact {
  display: inline-block;
  float: right;
}

